--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                 <div class="footer">
                     <div class="footersocialdiv">
                         <a href="https://www.facebook.com/cknepal" target="_blank"><img src="assets/images/facebook.png" alt=""></a>
-                        <a href="insertlinkhere" target="_blank"><img src="assets/images/instagram.png" alt=""></a>
-                        <a href="insertlinkhere" target="_blank"><img src="assets/images/twitter.png" alt=""></a>
+                        <a href="https://www.instagram.com/chaitanyachola/" target="_blank"><img src="assets/images/instagram.png" alt=""></a>
+                        <a href="https://twitter.com/ckuttarbahini" target="_blank"><img src="assets/images/twitter.png" alt=""></a>
                     </div>
 
                     <p>Copyright 2022 Chaitanya Krishna - All Rights Reserved.</p>
