--- a/index.html
+++ b/index.html
@@ -69,32 +69,12 @@
                 <div class="topsliderdiv">
                     <div class="swiper hometopswiper">
                         <div class="swiper-wrapper">
-                            <!-- <div class="swiper-slide">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
-                                            <div class="swiperleftdiv">
-                                                <h2>Weekly Gyanvigyan Satsang</h2>
-                                                <p>Conducted over 500 daily and weekly Satsangs with guest appearance by national and international experts to help society overcome COVID-induced fears and be resilient in every situation.</p>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
-                                            <div class="swiperrightdiv">
-                                                <img src="assets/images/mamashri.png" alt="">
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div> -->
-
                             <div class="swiper-slide">
                                 <div class="topbannerdiv">
                                     <img src="assets/images/banner1.png" alt="">
                                     <div class="bannertextoverlay">
                                         <h2>Weekly Gyanvigyan Satsang</h2>
-                                        <p>Conducted over 500 daily and weekly Satsangs with guest appearance by national and international experts to help society overcome COVID-induced fears and be resilient in every situation.</p>
+                                        <p>Conducted over 500 daily and weekly Satsangs with great effort and dedication by different devotees and hosts and guest appearance by national and international experts to help society overcome COVID-induced fears and be resilient in every situation. Continues to be live on Chaitanya Krishna Facebook page.</p>
                                     </div>
                                 </div>
                             </div>
@@ -105,8 +85,7 @@
                                     <div class="bannertextoverlay">
                                         <h2>Monumental Spiritual Science Yagna</h2>
                                         <p>For the global propagation of Nepal's glory and Gita knowledge, televised programmes over the most
-                                            watched religious channels in the world like Aastha and Sanskar with the direct participation of thousands
-                                            of people.</p>
+                                            watched religious channels in the world like Aastha, Sanskar, and many more channels & different social media with the direct participation of thousands of people.</p>
                                     </div>
                                 </div>
                             </div>
@@ -116,7 +95,7 @@
                                     <img src="assets/images/vegcampaign.jpg" alt="">
                                     <div class="bannertextoverlay">
                                         <h2>Vegetarian Campaign</h2>
-                                        <p>Succeeded in turning millions of people into vegetarian through interviews, lectures and training.</p>
+                                        <p>Succeeded in turning millions of people into vegetarian through motivational speeches, interviews, lectures, and training with strong evidence of Vedic and material science.</p>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +107,7 @@
                                         <h2>Spiritual and Motivational Training</h2>
                                         <p>Conducted training on culture, innovation, moral science, humanity, spirituality and memory power in
                                             thousands of campuses and schools as well as capacity building and motivational training for military,
-                                            police and government staff.</p>
+                                            police and government staff in different society and culture around the world.</p>
                                     </div>
                                 </div>
                             </div>
@@ -168,10 +147,11 @@
             <div class="col-lg-9 col-md-9 col-sm-12">
                 <div class="aboutleftdiv">
                     <p><span>Chaitanya Krishna</span></p>
-                    <p><span>Birthplace</span>: Galyang Municipality 1, Malunga, Syangja</p>
+                    <p><span>Birthplace</span>: Galyang Municipality 1, Malunga, Syangja (Uttarbahini Kshetra, Mahalinga Dham)</p>
                     <p><span>Education</span>: Post Graduate (Bachelor in English and Sanskrit Grammar, Post Graduate in History Purana Subject)</p>
                     <p><span>Award</span> : 5 Leader of the Nation 2017, Gold Medal, Vice Chancellor's Medal, Mahendra Vidyabhushan Kha, Jan Seva Shri Award</p>
-                    <p><span>Organization</span> : Founder and President, Shri Kaligandaki Spiritual Foundation (2072), Founder and President, Shri Kaligandaki Gurukulam (2075), Founder Patron of Shri Kaligandaki Natural Hospital (2079), Founder, Shri Kaligandaki Gyan Vigyan Pratishthan Europe (UK) (2078), Founder, Shri Radio Uttarvahini FM (2079), Affiliation : ISKCON - International Association of Krishna Consciousness Nepal Affiliation for 1 year from 2059</p>
+                    <p><span>Organization</span> : Founder and President, Shri Kaligandaki Spiritual Foundation (2072), Founder and President, Shri Kaligandaki Gurukulam (2075), Founder Patron of Shri Kaligandaki Natural Hospital (2079), Founder, Shri Kaligandaki Gyan Vigyan Pratishthan Europe (UK) (2078), Founder, Shri Radio Uttarvahini FM (2079)</p>
+                    <p><span>Affiliation</span> : ISKCON - International Society for Krishna Consciousness and many more spiritual organizations, including in Nepal, India, and countries abroad.
                 </div>
             </div>
         </div>
